# github-issue-grid

./: .gitignore  Cargo.toml
github-issues-export/: Cargo.toml
github-issues-export-lib/: Cargo.toml
github-issues-export-lib/src/: auth.rs  error.rs  lib.rs  model.rs  render.rs  template.hb  template.rs
github-issues-export/src/: main.rs
issue-grid/: Cargo.toml  config.yaml  webbuild.sh
issue-grid/sass/: _scrollnice.scss  _tooltip.scss  style.scss
issue-grid/src/: cfg_parse.rs  config.rs  main.rs  model.rs  remodel.rs  repo.rs  serde_util.rs  sort.rs
issue-grid/src/remodel/: config.rs  github.rs  mod.rs  remodel_macro.rs
issue-grid/static/: index.html  style.css  style.css.map
profile/: join-html.txt  join-md.txt  profile.sh
