[package]
name = "github-issues-export"
version = "0.1.0"
authors = ["Phoenix Kahlo <kahlo.phoenix@gmail.com.com>"]
edition = "2018"
workspace = ".."

[dependencies]
serde_derive = "1.0"
docopt = "0.8"
futures = "0.1"
serde = "1.0"

github-issues-export-lib = { path = "../github-issues-export-lib" }