[package]
name = "issue-grid"
version = "0.1.0"
authors = ["Phoenix Kahlo <kahlo.phoenix@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
rocket = "0.4.2"
futures = "0.1"
github-issues-export-lib = { path = "../github-issues-export-lib" }
failure = "0.1.6"
rocket_contrib = "0.4.2"
rocket-cache-response = "0.5.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8.11"
regex = "1.3.1"


